--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 	<h1>Welcome to my blog!</h1>
-	<p>Well, let's see what I have to write.<br>This is my first blog. So, I don't really know how to do this. Maybe I will start with my love and pasion for computer science. Being able to develop mobile apps is both a huge power and a tremendous joy."</p>
+	<p><img alt="geek" src="http://cgimg.s3.amazonaws.com/t/g68/342868/1239902_large.jpg">Well, let's see what I have to write.<br>This is my first blog. So, I don't really know how to do this. Maybe I will start with my love and pasion for computer science. Being able to develop mobile apps is both a huge power and a tremendous joy."</p>
 </body>
 </html>
